<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/selector_bottom_nav_home"
        android:orderInCategory="3"
        android:title="@string/home"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/action_compose"
        android:icon="@drawable/selector_bottom_nav_compose"
        android:orderInCategory="2"
        android:title="@string/compose"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/selector_bottom_nav_profile"
        android:orderInCategory="1"
        android:title="@string/profile"
        app:showAsAction="always" />
</menu>