<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ComposeFragment">


    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textPersonName"
        tools:text="Description" />

    <Button
        android:id="@+id/btnCaptureImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etDescription"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:text="@string/take_picture" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivPostImage"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:text="@string/submit" />

    <ImageView
        android:id="@+id/ivPostImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/btnCaptureImage"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/capturedimage"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSubmit"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="257dp"
        android:text="@string/log_out" />

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="195dp"
        android:layout_height="245dp"
        android:layout_centerInParent="true"
        android:translationZ="2dp"
        android:visibility="invisible" />

</RelativeLayout>